--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -5,8 +5,8 @@
     <h4 class="media-heading"><%= link_to firstName(comment.user.name), comment.user.profile_url, target: '_blank' %> says
       <small class="text-muted">[at <%= comment.created_at.strftime('%-d %B %Y, %H:%M:%S') %>]</small></h4>
     <p><%= comment.body %></p>
-    <% if current_user == comment.user %>
-      <%= button_to "delete", @comment, :method=>:delete, :class=>:destroy %>
-    <% end %>
+    <!--<% if current_user == comment.user %>-->
+    <!--  <%= button_to "delete", @comment, :method=>:delete, :class=>:destroy %>-->
+    <!--<% end %>-->
   </div>
 </li>
