added delete button to comments

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -6,7 +6,7 @@
       <small class="text-muted">[at <%= comment.created_at.strftime('%-d %B %Y, %H:%M:%S') %>]</small></h4>
     <p><%= comment.body %></p>
     <% if current_user == comment.user %>
-      <%= button_to "delete", comment, :method=>:destroy, :class=>:destroy %>
+      <%= button_to "delete", comment, :method=>:destroy %>
     <% end %>
   </div>
 </li>
