--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,6 +1,3 @@
-<% if @comment.new_record? %> #if there is NOT a new comment, returns true
-  alert('Your comment cannot be saved.');
-<% else %>
-  $('#comments').find('.media-list').prepend('<%= j render @comment %>');
-  $('#comment_body').val('');
-<% end %>
+publisher = client.publish('/comments', {
+  message: '<%= j render @comment %>'
+});
