--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,3 +1,5 @@
+#tells the files in /js/comments what the message should look like
 publisher = client.publish('/comments', {
   message: '<%= j render @comment %>'
 });
+
