--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,5 +1,12 @@
-#tells the files in /js/comments what the message should look like
 publisher = client.publish('/comments', {
   message: '<%= j render @comment %>'
 });
-
+ 
+publisher.callback(function() {
+  $('#comment_body').val('');
+  $('#new_comment').find("input[type='submit']").val('Submit').prop('disabled', false)
+});
+ 
+publisher.errback(function() {
+  alert('There was an error while posting your comment.');
+});
