--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,4 +1,4 @@
-var publisher = client.publish('/comments', {
+publisher = client.publish('/comments', {
   message: '<%= j render @comment %>'
 });
 
