--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,12 +1,6 @@
-publisher = client.publish('/comments', {
-  message: '<%= j render @comment %>'
-});
-
-publisher.callback(function() {
+<% if @comment.new_record? %>
+  alert('Your comment cannot be saved.');
+<% else %>
+  $('#comments').find('.media-list').prepend('<%= j render @comment %>');
   $('#comment_body').val('');
-  $('#new_comment').find("input[type='submit']").val('Submit').prop('disabled', false);
-});
-
-publisher.errback(function() {
-  alert('There was an error while posting your comment.');
-});
+<% end %>
