--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,9 @@
   <title>DrakeChat</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  layouts/application.html.erb
+  <%= javascript_include_tag :defaults %>
+  <%= csrf_meta_tag %>
   <%= csrf_meta_tags %>
 </head>
 <body>
